Testiranje dodavanja i pomeranja stolova

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -76,6 +76,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/guestfactory.js"></script>
+        <script src="scripts/directives/draggabletable.js"></script>
         <!-- endbuild -->
 </div>
 </body>
