Dodat servis za stolove, napravljen gornji meni

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -4,39 +4,180 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
+    <style>
+        body {
+            padding-top: 50px;
+            padding-bottom: 20px;
+        }
+    </style>
     <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
+    <link rel="images/apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+
+        <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
+        <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
   </head>
-  <body ng-app="rezervoarApp">
-  <div ng-view>
+  <body ng-app="rezervoarApp" ng-controller='MainCtrl'>
+  <!-- <div ng-view> -->
+    <div>
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Rezervoar</a>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Rezervacije</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-wrench"></span> Sign Up</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
-      </div>
-    </nav>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        <img src="images/logo-rezervoar.png" alt="Logo Rezervoar"/>
+                    </a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="./">Rezervacije <span class="sr-only">(current)</span></a></li>
+                        <li><a href="../navbar-static-top/">Setup</a></li>
+                        <li><a href="../navbar-fixed-top/">Odjavi se</a></li>
+                    </ul>
+                </div><!--/.navbar-collapse -->
+            </div>
+        </nav>
 
     <div class="container-fluid">
-
+        <div class="col-md-4">
+            <div class="panel-group" id="accordion">
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <p>
+                            21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                          <span class="text-right">REZERVISANO<span>
+                        </p>
+                      Pera Peric 22
+                    </h4>
+                  </div>
+                  <div id="collapse1" class="collapsed panel-collapse collapse">
+                    <div class="panel-body">
+                        <label>Telefon: </label> 0641234567
+                        <br/>
+                        <label>Email: </label> pera.peric@gmail.com
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <p>
+                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                            <span class="text-right">REZERVISANO<span>
+                          </p>
+                        Pera Peric 22
+                      </h4>
+                  </div>
+                  <div id="collapse2" class="collapsed panel-collapse collapse">
+                      <div class="panel-body">
+                          <label>Telefon: </label> 0641234567
+                          <br/>
+                          <label>Email: </label> pera.peric@gmail.com
+                      </div>
+                  </div>
+                </div>
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <p>
+                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                            <span class="text-right">REZERVISANO<span>
+                          </p>
+                        Pera Peric 22
+                      </h4>
+                  </div>
+                  <div id="collapse3" class="collapsed panel-collapse collapse">
+                      <div class="panel-body">
+                          <label>Telefon: </label> 0641234567
+                          <br/>
+                          <label>Email: </label> pera.peric@gmail.com
+                      </div>
+                  </div>
+                </div>
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <p>
+                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                            <span class="text-right">REZERVISANO<span>
+                          </p>
+                        Pera Peric 22
+                      </h4>
+                  </div>
+                  <div id="collapse4" class="panel-collapse collapse">
+                      <div class="panel-body">
+                          <label>Telefon: </label> 0641234567
+                          <br/>
+                          <label>Email: </label> pera.peric@gmail.com
+                      </div>
+                  </div>
+                </div>
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse5">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <p>
+                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                            <span class="text-right">REZERVISANO<span>
+                          </p>
+                        Pera Peric 22
+                      </h4>
+                  </div>
+                  <div id="collapse5" class="panel-collapse collapse">
+                      <div class="panel-body">
+                          <label>Telefon: </label> 0641234567
+                          <br/>
+                          <label>Email: </label> pera.peric@gmail.com
+                      </div>
+                  </div>
+                </div>
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse6">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <p>
+                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                            <span class="text-right">REZERVISANO<span>
+                          </p>
+                        Pera Peric 22
+                      </h4>
+                  </div>
+                  <div id="collapse6" class="panel-collapse collapse">
+                      <div class="panel-body">
+                          <label>Telefon: </label> 0641234567
+                          <br/>
+                          <label>Email: </label> pera.peric@gmail.com
+                      </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+            <div class="col-md-8">
+                <ul>
+                    <li>{{ guest.first_name }}</li>
+                    <li>{{ guest.last_name }}</li>
+                    <li>{{ guest.phone_number }}</li>
+                    <li>{{ guest.email }}</li>
+                </ul>
+                <div data-ng-repeat="tab in tables" style="float:left">
+                    <!-- <aside draggable-table tableLabel='{{tab.label}}' seats='{{tab.seats}}' taken='{{tab.taken}}'></aside> -->
+                    <aside draggable-table tableLabel='{{tab.label}}'></aside>
+                </div>
+                <div class="panel">
+                    <img src="images/plan.png" class="img-rounded" alt="Plan" width="750" height="500">
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
@@ -75,8 +216,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/services/guestfactory.js"></script>
         <script src="scripts/directives/draggabletable.js"></script>
+        <script src="scripts/services/guestfactory.js"></script>
+        <script src="scripts/services/tablefactory.js"></script>
         <!-- endbuild -->
 </div>
 </body>
