--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -21,10 +21,6 @@
   </head>
   <body ng-app="rezervoarApp" ng-controller='MainCtrl'>
   <!-- <div ng-view> -->
-    <div>
-    <!--[if lte IE 8]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
 
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
@@ -49,126 +45,159 @@
             </div>
         </nav>
 
-    <div class="container-fluid">
-        <div class="col-md-4">
-            <div class="panel-group" id="accordion">
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                  <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <p>
-                            21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                          <span class="text-right">REZERVISANO<span>
-                        </p>
-                      Pera Peric 22
-                    </h4>
-                  </div>
-                  <div id="collapse1" class="collapsed panel-collapse collapse">
-                    <div class="panel-body">
-                        <label>Telefon: </label> 0641234567
-                        <br/>
-                        <label>Email: </label> pera.peric@gmail.com
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                  <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <p>
-                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                            <span class="text-right">REZERVISANO<span>
-                          </p>
-                        Pera Peric 22
-                      </h4>
-                  </div>
-                  <div id="collapse2" class="collapsed panel-collapse collapse">
-                      <div class="panel-body">
-                          <label>Telefon: </label> 0641234567
-                          <br/>
-                          <label>Email: </label> pera.peric@gmail.com
-                      </div>
-                  </div>
-                </div>
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-                  <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <p>
-                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                            <span class="text-right">REZERVISANO<span>
-                          </p>
-                        Pera Peric 22
-                      </h4>
-                  </div>
-                  <div id="collapse3" class="collapsed panel-collapse collapse">
-                      <div class="panel-body">
-                          <label>Telefon: </label> 0641234567
-                          <br/>
-                          <label>Email: </label> pera.peric@gmail.com
-                      </div>
-                  </div>
-                </div>
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-                  <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <p>
-                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                            <span class="text-right">REZERVISANO<span>
-                          </p>
-                        Pera Peric 22
-                      </h4>
-                  </div>
-                  <div id="collapse4" class="panel-collapse collapse">
-                      <div class="panel-body">
-                          <label>Telefon: </label> 0641234567
-                          <br/>
-                          <label>Email: </label> pera.peric@gmail.com
-                      </div>
-                  </div>
-                </div>
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse5">
-                  <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <p>
-                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                            <span class="text-right">REZERVISANO<span>
-                          </p>
-                        Pera Peric 22
-                      </h4>
-                  </div>
-                  <div id="collapse5" class="panel-collapse collapse">
-                      <div class="panel-body">
-                          <label>Telefon: </label> 0641234567
-                          <br/>
-                          <label>Email: </label> pera.peric@gmail.com
-                      </div>
-                  </div>
-                </div>
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse6">
-                  <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <p>
-                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                            <span class="text-right">REZERVISANO<span>
-                          </p>
-                        Pera Peric 22
-                      </h4>
-                  </div>
-                  <div id="collapse6" class="panel-collapse collapse">
-                      <div class="panel-body">
-                          <label>Telefon: </label> 0641234567
-                          <br/>
-                          <label>Email: </label> pera.peric@gmail.com
-                      </div>
-                  </div>
+    <div class="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-8 text-center slider-wrapper">
+                    <p>
+                        <span class="holder">
+                            <span id="from" class="bubble"></span>
+                        </span>
+                        <span class="holder">
+                            <span id="to" class="bubble"></span>
+                        </span>
+                    </p>
+                    <div id="slider-range"></div>
                 </div>
             </div>
         </div>
-            <div class="col-md-8">
-                <ul>
-                    <li>{{ guest.first_name }}</li>
-                    <li>{{ guest.last_name }}</li>
-                    <li>{{ guest.phone_number }}</li>
-                    <li>{{ guest.email }}</li>
-                </ul>
+        <div class="container">
+            <div class="white-area">
+
+
+                <div class="row">
+
+
+                    <div class="col-xs-12 col-sm-8 text-center">
+                        <div class="panel">
+                            <img src="images/plan.png" class="img-rounded" alt="Plan" width="750" height="500">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 text-center">
+                        <div class="right-side">
+                            <div class="row">
+                                <div class="col-xs-12">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                <div class="panel-group" id="accordion">
+                    <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                      <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <p>
+                                21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                              <span class="text-right">REZERVISANO<span>
+                            </p>
+                          Pera Peric 22
+                        </h4>
+                      </div>
+                      <div id="collapse1" class="collapsed panel-collapse collapse">
+                        <div class="panel-body">
+                            <label>Telefon: </label> 0641234567
+                            <br/>
+                            <label>Email: </label> pera.peric@gmail.com
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                      <div class="panel-heading">
+                          <h4 class="panel-title">
+                              <p>
+                                  21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                <span class="text-right">REZERVISANO<span>
+                              </p>
+                            Pera Peric 22
+                          </h4>
+                      </div>
+                      <div id="collapse2" class="collapsed panel-collapse collapse">
+                          <div class="panel-body">
+                              <label>Telefon: </label> 0641234567
+                              <br/>
+                              <label>Email: </label> pera.peric@gmail.com
+                          </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                      <div class="panel-heading">
+                          <h4 class="panel-title">
+                              <p>
+                                  21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                <span class="text-right">REZERVISANO<span>
+                              </p>
+                            Pera Peric 22
+                          </h4>
+                      </div>
+                      <div id="collapse3" class="collapsed panel-collapse collapse">
+                          <div class="panel-body">
+                              <label>Telefon: </label> 0641234567
+                              <br/>
+                              <label>Email: </label> pera.peric@gmail.com
+                          </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+                      <div class="panel-heading">
+                          <h4 class="panel-title">
+                              <p>
+                                  21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                <span class="text-right">REZERVISANO<span>
+                              </p>
+                            Pera Peric 22
+                          </h4>
+                      </div>
+                      <div id="collapse4" class="panel-collapse collapse">
+                          <div class="panel-body">
+                              <label>Telefon: </label> 0641234567
+                              <br/>
+                              <label>Email: </label> pera.peric@gmail.com
+                          </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse5">
+                      <div class="panel-heading">
+                          <h4 class="panel-title">
+                              <p>
+                                  21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                <span class="text-right">REZERVISANO<span>
+                              </p>
+                            Pera Peric 22
+                          </h4>
+                      </div>
+                      <div id="collapse5" class="panel-collapse collapse">
+                          <div class="panel-body">
+                              <label>Telefon: </label> 0641234567
+                              <br/>
+                              <label>Email: </label> pera.peric@gmail.com
+                          </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse6">
+                      <div class="panel-heading">
+                          <h4 class="panel-title">
+                              <p>
+                                  21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                <span class="text-right">REZERVISANO<span>
+                              </p>
+                            Pera Peric 22
+                          </h4>
+                      </div>
+                      <div id="collapse6" class="panel-collapse collapse">
+                          <div class="panel-body">
+                              <label>Telefon: </label> 0641234567
+                              <br/>
+                              <label>Email: </label> pera.peric@gmail.com
+                          </div>
+                      </div>
+                    </div>
+                </div>
+
+
+
+
+
                 <div data-ng-repeat="tab in tables" style="float:left">
                     <!-- <aside draggable-table tableLabel='{{tab.label}}' seats='{{tab.seats}}' taken='{{tab.taken}}'></aside> -->
                     <aside draggable-table ng-class="{'taken': tab.taken}">
@@ -176,11 +205,13 @@
                         <span><i class="glyphicon glyphicon-user"></i> {{tab.seats}}</span>
                     </aside>
                 </div>
-                <div class="panel">
-                    <img src="images/plan.png" class="img-rounded" alt="Plan" width="750" height="500">
-                </div>
+
+
             </div>
-        </div>
+
+            </div>
+            </div>
+
     </div>
 
     <div class="footer">
