Dodata funkcija za ocitavanje vrednosti sa slajdera

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -53,7 +53,8 @@
 
                         <rzslider rz-slider-model="slider.minValue"
                             rz-slider-high="slider.maxValue"
-                            rz-slider-options="slider.options" class="slider">
+                            rz-slider-options="slider.options"
+                            class="slider">
                         </rzslider>
                 </div>
             </div>
