--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -190,10 +190,9 @@
                     </div>
                 </div>
 
-                <!-- <div data-ng-repeat="tab in tables" style="float:left">>
-                </div> -->
-                <div data-ng-repeat="tab in tables | unique: 'label'" style="float:left">
-                    <aside draggable-table id="{{tab.label}}" ng-class="{'taken': tab.taken}">
+                <div data-ng-repeat="tab in tables | unique: 'label'" draggable-table style="float:left;">
+                    <time-line start-time="startTime" end-time="endTime" taken-intervals="tab.takenList"></time-line>
+                    <aside id="{{tab.label}}" ng-class="{'taken': tab.taken}">
                         <span>{{tab.label}}</span><br/>
                         <span><i class="glyphicon glyphicon-user"></i> {{tab.seats}}</span>
                     </aside>
@@ -246,6 +245,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/directives/draggabletable.js"></script>
+        <script src="scripts/directives/timeline.js"></script>
         <script src="scripts/services/guestfactory.js"></script>
         <script src="scripts/services/tablefactory.js"></script>
         <script src="scripts/services/reservationfactory.js"></script>
